--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,11 +1,13 @@
-v0.1.12 2016-04-20
+v0.1.13 2016-04-23
 修改：
-    修改wildStream.bindToDOM()入参类型，入参由elementId改为element。
+    修改 wildStream.bindToDOM() 入参类型，入参由 elementId 改为 element。
 修复：
-    修复safari浏览器中将wildStream与Obeject元素绑定失败的问题。
+    修复 safari 浏览器中将 wildStream 与 Obeject 元素绑定失败的问题。
+    修复使用 nodejs 时，wildrtc 无法 require 的 bug。
+
 v0.1.11 2016-04-16
 新增：
-    增加对OSX下的 safari 浏览器支持，需要按照提示安装插件。
+    增加对 OSX 下的 safari 浏览器支持，需要按照提示安装插件。
 优化：
     退出会话后残留数据会被完全清除。
 修复：
@@ -15,9 +17,9 @@ v0.1.10 2016-03-31
 优化：
     优化音视频输入体验;
 修复：
-    修复stream_removed事件触发异常的bug;
-    修复join的回调函数多次触发的bug;
-    修复其他小bug。
+    修复 stream_removed 事件触发异常的 bug;
+    修复 join 的回调函数多次触发的 bug;
+    修复其他小 bug。
 
 v0.1.0 2016-03-16
 首次发布。
